# xwiimote-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
src/: events.rs  lib.rs  reactor.rs
wiinote/: Cargo.toml  README.md
wiinote/src/: keyboard.rs  main.rs
xwiimote-sys/: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
xwiimote-sys/src/: lib.rs
