[package]
name = "xwiimote"
version = "0.2.3"
authors = ["Hugo Sanz González <hugo@hgsg.me>"]
license = "MIT"
repository = "https://github.com/hsanzg/xwiimote"
description = "Idiomatic Rust bindings to the xwiimote user-space library"
categories = ["api-bindings"]
keywords = ["xwiimote", "bindings"]
edition = "2021"

[dependencies]
xwiimote-sys = { path = "xwiimote-sys", version = "0.1" }
