[package]
name = "xwiimote-sys"
version = "0.1.5"
authors = ["Hugo Sanz González <hugo@hgsg.me>"]
links = "xwiimote"
license = "MIT"
repository = "https://github.com/hsanzg/xwiimote"
description = "Low-level bindings to the xwiimote user-space library"
categories = ["external-ffi-bindings"]
keywords = ["xwiimote", "bindings"]
edition = "2021"

[build-dependencies]
bindgen = "0.68"
cc = "1.0"
pkg-config = "0.3.27"

[features]
# Produce a statically-linked xwiimote.
static = []


